--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@ Photography
 </div>
 </a>
 
-<a href="https://zakerytclarke.github.io/resume.html">
+<a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:49%;">
 <img src="resume.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
-Resume
+Codepen
 </h3>
 </div>
 </a>
@@ -158,11 +158,11 @@ Photography
 </div>
 </a>
 
-<a href="https://zakerytclarke.github.io/resume.html">
+<a href=https://codepen.io/zakerytclarke/">
 <div style="float:left; width:24%;">
 <img src="resume.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
-Resume
+Codepen
 </h3>
 </div>
 </a>
