--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Photography
 
 <a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:49%;">
-<img src="resume.png" style="width:80%;border-radius:50%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Codepen
 </h3>
@@ -160,7 +160,7 @@ Photography
 
 <a href=https://codepen.io/zakerytclarke/">
 <div style="float:left; width:24%;">
-<img src="resume.png" style="width:80%;border-radius:50%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Codepen
 </h3>
