--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Photography
 </div>
 </a>
 
-<a href=https://codepen.io/zakerytclarke/">
+<a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:24%;">
 <img src="codepen.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
