--- a/projects.html
+++ b/projects.html
@@ -9,20 +9,192 @@ Zakery Clarke
 </title>
 <style>
 body {
+background-image: url("background.png");
 background-color:white;
+background-size:33.33%;
 }
 a {
 color:white;
 text-decoration:none;
 }
+
 </style>
 </head>
 <body style="background-color:white;">
-<h1>
-  Zakery Clarke
-  </h1>
-  <h2>
-    Projects
-  </h2> 
+
+
+<div style="width:100%; text-align: center;">
+<img src="bg.png" style="width:100% position:relative;top:0;left:10%;">
+<div style="z-index:100;width:102%;margin-left:-2%; position:absolute;top:4%;background-color:rgba(0,0,0,1); color:white;font-size:200%;">
+<div style="opacity:1;">
+<div style="width:50%;">
+<h1 style="float:left;padding-left:30px;font-size:50px;">
+Zakery Clarke
+</h1>
+</div>
+<div style="width:50%;float:right;padding-top:2%;">
+<a href="mailto:zakeryt@zakeryclarke.com">
+zakeryt@zakeryclarke.com
+</a>
+<br>
+<a href="tel:15053360208">
+1.505.336.0208
+</a>
+<br>
+</div>
+
+</div>
+</div>
+
+
+
+<br>
+<div style="width:100%;margin-left:-30px;padding-left:30px;float:none; background-color:rgba(0,0,0,0.7);opacity:100.9;position:absolute;top:30%;margin-top:-10%;padding-top:-10%;">
+<br>
+
+  
+ <div id="tall" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:7%;margin-top:0;padding-top:10%;">
+<a href="https://www.fiverr.com/zakerytclarke">
+<div style="float:left; width:49%;">
+<img src="fiverr.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Hire me
+</h3>
+</div>
+</a>
+<a href="https://github.com/zakerytclarke">
+<div style="float:left; width:49%;">
+<img src="github.gif" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Portfolio
+</h3>
+</div>
+</a>
+
+<a href="https://zakerytclarke.github.io/projects.html">
+<div style="float:left; width:49%;">
+<img src="website.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Projects
+</h3>
+</div>
+</a>
+
+<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
+<div style="float:left; width:49%;">
+<img src="android.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Android Apps
+</h3>
+</div>
+</a>
+
+<a href="https://zakeryclarkephotography.wordpress.com/">
+<div style="float:left; width:49%;">
+<img src="photo.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Photography
+</h3>
+</div>
+</a>
+
+<a href="https://codepen.io/zakerytclarke/">
+<div style="float:left; width:49%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Codepen
+</h3>
+</div>
+</a>
+   
+</div>
+
+  
+  
+<br>
+<div id="wide" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:10%;margin-top:0;padding-top:10%;">
+<a href="https://www.fiverr.com/zakerytclarke">
+<div style="float:left; width:24%;">
+<img src="fiverr.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Hire me
+</h3>
+</div>
+</a>
+  
+<a href="https://github.com/zakerytclarke">
+<div style="float:left; width:24%;">
+<img src="github.gif" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Portfolio
+</h3>
+</div>
+</a>
+
+<a href="https://zakerytclarke.github.io/projects.html">
+<div style="float:left; width:24%;">
+<img src="website.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Projects
+</h3>
+</div>
+</a>
+
+<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
+<div style="float:left; width:24%;">
+<img src="android.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Android Apps
+</h3>
+</div>
+</a>
+
+<a href="https://zakeryclarkephotography.wordpress.com/">
+<div style="float:left; width:24%;">
+<img src="photo.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Photography
+</h3>
+</div>
+</a>
+
+<a href="https://codepen.io/zakerytclarke/">
+<div style="float:left; width:24%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Codepen
+</h3>
+</div>
+</a>
+  
+</div>
+
+
+
+
+
+
+
+
+
+
+</div>
+</div>
+
+</div>
+</div>
+<script>
+
+if (screen.height>screen.width) {
+document.getElementById('tall').style.display = 'block';
+document.getElementById('wide').style.display = 'none';
+
+} else {
+document.getElementById('wide').style.display = 'block';
+document.getElementById('tall').style.display = 'none';
+
+}
+
+</script>
 </body>
 </html>
