--- a/projects.html
+++ b/projects.html
@@ -54,14 +54,7 @@ zakeryt@zakeryclarke.com
 
   
  <div id="tall" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:7%;margin-top:0;padding-top:10%;">
-<a href="https://www.fiverr.com/zakerytclarke">
-<div style="float:left; width:49%;">
-<img src="fiverr.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Hire me
-</h3>
-</div>
-</a>
+
 <a href="https://github.com/zakerytclarke">
 <div style="float:left; width:49%;">
 <img src="github.gif" style="width:80%;border-radius:50%;">
@@ -71,14 +64,6 @@ Portfolio
 </div>
 </a>
 
-<a href="https://zakerytclarke.github.io/projects.html">
-<div style="float:left; width:49%;">
-<img src="website.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Projects
-</h3>
-</div>
-</a>
 
 <a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
 <div style="float:left; width:49%;">
@@ -113,56 +98,57 @@ Codepen
   
 <br>
 <div id="wide" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:10%;margin-top:0;padding-top:10%;">
-<a href="https://www.fiverr.com/zakerytclarke">
-<div style="float:left; width:24%;">
-<img src="fiverr.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Hire me
-</h3>
-</div>
-</a>
-  
 <a href="https://github.com/zakerytclarke">
 <div style="float:left; width:24%;">
 <img src="github.gif" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
-Portfolio
+Github
 </h3>
 </div>
 </a>
 
-<a href="https://zakerytclarke.github.io/projects.html">
-<div style="float:left; width:24%;">
-<img src="website.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Projects
-</h3>
-</div>
-</a>
-
-<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
-<div style="float:left; width:24%;">
-<img src="android.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Android Apps
-</h3>
-</div>
-</a>
-
-<a href="https://zakeryclarkephotography.wordpress.com/">
-<div style="float:left; width:24%;">
-<img src="photo.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Photography
-</h3>
-</div>
-</a>
 
 <a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:24%;">
 <img src="codepen.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Codepen
+</h3>
+</div>
+</a>
+  
+<a href="https://emmaxbuck.github.io/calc42">
+<div style="float:left; width:24%;">
+  <iframe src="https://emmaxbuck.github.io/calc42"></iframe>
+<h3 style="text-align:center;">
+Emmaxbuck
+</h3>
+</div>
+</a>  
+  
+<a href="https://zakerytclarke.github.io/calc42">
+<div style="float:left; width:24%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+URL Embeder
+</h3>
+</div>
+</a>
+<a href="https://zakerytclarke.github.io/calc42">
+<div style="float:left; width:24%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Calc 42
+</h3>
+</div>
+</a>
+  
+
+<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
+<div style="float:left; width:24%;">
+<img src="android.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Atlas Calc
 </h3>
 </div>
 </a>
