--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@ Codepen
   
 <a href="https://emmaxbuck.github.io/calc42">
 <div style="float:left; width:24%;">
-  <iframe src="https://emmaxbuck.github.io/calc42"></iframe>
+<img src="codepen.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Emmaxbuck
 </h3>
@@ -142,6 +142,23 @@ Calc 42
 </h3>
 </div>
 </a>
+<a href="https://zakerytclarke.github.io/calc42">
+<div style="float:left; width:24%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+OOS
+</h3>
+</div>
+</a>
+<a href="https://zakerytclarke.github.io/calc42">
+<div style="float:left; width:24%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Marmot Editor
+</h3>
+</div>
+</a>
+    
   
 
 <a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
