--- a/projects.html
+++ b/projects.html
@@ -117,16 +117,16 @@ Codepen
 </div>
 </a>
   
-<a href="https://emmaxbuck.github.io/calc42">
+<a href="https://emmaxbuck.github.io">
 <div style="float:left; width:24%;">
-<img src="codepen.png" style="width:80%;border-radius:50%;">
+<img src="emma.jpg" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Emmaxbuck
 </h3>
 </div>
 </a>  
   
-<a href="https://zakerytclarke.github.io/calc42">
+<a href="https://zakerytclarke.github.io/urlembeder">
 <div style="float:left; width:24%;">
 <img src="codepen.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
@@ -142,23 +142,31 @@ Calc 42
 </h3>
 </div>
 </a>
-<a href="https://zakerytclarke.github.io/calc42">
+<a href="https://zakerytclarke.github.io/oos">
 <div style="float:left; width:24%;">
-<img src="codepen.png" style="width:80%;border-radius:50%;">
+<img src="https://zakerytclarke.github.io/oos/oo.jpg" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 OOS
 </h3>
 </div>
 </a>
-<a href="https://zakerytclarke.github.io/calc42">
+<a href="https://zakerytclarke.github.io/marmoteditor/marmot.jpg">
 <div style="float:left; width:24%;">
-<img src="codepen.png" style="width:80%;border-radius:50%;">
+<img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Marmot Editor
 </h3>
 </div>
 </a>
-    
+  
+<a href="https://zakerytclarke.github.io/asciirpg">
+<div style="float:left; width:24%;">
+<img src="asciirpg.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
++ASCII RPG+
+</h3>
+</div>
+</a>  
   
 
 <a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
