--- a/projects.html
+++ b/projects.html
@@ -98,15 +98,6 @@ Codepen
   
 <br>
 <div id="wide" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:10%;margin-top:0;padding-top:10%;">
-<a href="https://github.com/zakerytclarke">
-<div style="float:left; width:24%;">
-<img src="github.gif" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Github
-</h3>
-</div>
-</a>
-
 
 <a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:24%;">
@@ -119,7 +110,7 @@ Codepen
   
 <a href="https://emmaxbuck.github.io">
 <div style="float:left; width:24%;">
-<img src="emma.jpg" style="width:80%;border-radius:50%;">
+<img src="emma.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Emmaxbuck
 </h3>
@@ -173,7 +164,7 @@ Atlas Calc
 
 <a href="https://zakerytclarke.github.io/asciirpg">
 <div style="float:left; width:24%;">
-<img src="asciirpg.png" style="width:80%;border-radius:50%;">
+<img src="asciirpg.PNG" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 +ASCII RPG+
 </h3>
