--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@ Emmaxbuck
   
 <a href="https://zakerytclarke.github.io/urlembeder">
 <div style="float:left; width:24%;">
-<img src="codepen.png" style="width:80%;border-radius:50%;">
+<img src="urlembeder.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 URL Embeder
 </h3>
@@ -128,7 +128,7 @@ URL Embeder
   
 <a href="https://zakerytclarke.github.io/calc42">
 <div style="float:left; width:24%;">
-<img src="codepen.png" style="width:80%;border-radius:50%;">
+<img src="https://zakerytclarke.github.io/calc42" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Calc 42
 </h3>
