--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@ OOS
 </div>
 </a>
   
-<a href="https://zakerytclarke.github.io/marmoteditor/marmot.jpg">
+<a href="https://zakerytclarke.github.io/marmoteditor">
 <div style="float:left; width:24%;">
 <img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
