--- a/projects.html
+++ b/projects.html
@@ -55,34 +55,6 @@ zakeryt@zakeryclarke.com
   
  <div id="tall" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:7%;margin-top:0;padding-top:10%;">
 
-<a href="https://github.com/zakerytclarke">
-<div style="float:left; width:49%;">
-<img src="github.gif" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Portfolio
-</h3>
-</div>
-</a>
-
-
-<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
-<div style="float:left; width:49%;">
-<img src="android.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Android Apps
-</h3>
-</div>
-</a>
-
-<a href="https://zakeryclarkephotography.wordpress.com/">
-<div style="float:left; width:49%;">
-<img src="photo.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Photography
-</h3>
-</div>
-</a>
-
 <a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:49%;">
 <img src="codepen.png" style="width:80%;border-radius:50%;">
@@ -91,6 +63,70 @@ Codepen
 </h3>
 </div>
 </a>
+  
+<a href="https://emmaxbuck.github.io">
+<div style="float:left; width:49%;">
+<img src="emma.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Emmaxbuck
+</h3>
+</div>
+</a>  
+  
+<a href="https://zakerytclarke.github.io/urlembeder">
+<div style="float:left; width:49%;">
+<img src="urlembeder.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+URL Embeder
+</h3>
+</div>
+</a>
+  
+<a href="https://zakerytclarke.github.io/calc42">
+<div style="float:left; width:49%;">
+<img src="https://zakerytclarke.github.io/calc42/42.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Calc 42
+</h3>
+</div>
+</a>
+  
+<a href="https://zakerytclarke.github.io/oos">
+<div style="float:left; width:49%;">
+<img src="https://zakerytclarke.github.io/oos/oo.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+OOS
+</h3>
+</div>
+</a>
+  
+<a href="https://zakerytclarke.github.io/marmoteditor">
+<div style="float:left; width:49%;">
+<img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Marmot Editor
+</h3>
+</div>
+</a>
+ 
+<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
+<div style="float:left; width:49%;">
+<img src="android.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Atlas Calc
+</h3>
+</div>
+</a>
+
+<a href="https://zakerytclarke.github.io/asciirpg">
+<div style="float:left; width:49%;">
+<img src="asciirpg.PNG" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
++ASCII RPG+
+</h3>
+</div>
+</a>  
+ 
    
 </div>
 
@@ -128,7 +164,7 @@ URL Embeder
   
 <a href="https://zakerytclarke.github.io/calc42">
 <div style="float:left; width:24%;">
-<img src="https://zakerytclarke.github.io/calc42" style="width:80%;border-radius:50%;">
+<img src="https://zakerytclarke.github.io/calc42/42.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Calc 42
 </h3>
