--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ zakeryt@zakeryclarke.com
 
 
 <br>
-<div style="z-index:1000;width:100%;margin-left:-30px;padding-left:30px;float:none; background-color:rgba(0,0,0,0.7);opacity:100.9;position:absolute;top:30vh;margin-top:-10%;padding-top:-10%;">
+<div style="width:100%;margin-left:-30px;padding-left:30px;float:none; background-color:rgba(0,0,0,0.7);opacity:100.9;position:absolute;top:10vh;padding-top:30vh;margin-top:-10%;padding-top:-10%;">
 <br>
 
   
