--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@ zakeryt@zakeryclarke.com
 
 
 <br>
-<div style="width:100%;margin-left:-30px;padding-left:30px;float:none; background-color:rgba(0,0,0,0.7);opacity:100.9;position:absolute;top:30%;margin-top:-10%;padding-top:-10%;">
+<div style="width:100%;margin-left:-30px;padding-left:30px;float:none; background-color:rgba(0,0,0,0.7);opacity:100.9;position:absolute;top:10vh;padding-top:20vh;margin-top:-10%;padding-top:-10%;">
 <br>
 
   
@@ -170,6 +170,15 @@ Calc 42
 </h3>
 </div>
 </a>
+<a href="https://zakerytclarke.github.io/oos">
+<div style="float:left; width:24%;">
+<img src="https://zakerytclarke.github.io/oos/oo.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Calc 42
+</h3>
+</div>
+</a>  
+  
   
 
   
