--- a/projects.html
+++ b/projects.html
@@ -172,9 +172,9 @@ Calc 42
 </a>
 <a href="https://zakerytclarke.github.io/oos">
 <div style="float:left; width:24%;">
-<img src="https://zakerytclarke.github.io/oos/oo.png" style="width:80%;border-radius:50%;">
+<img src="https://zakerytclarke.github.io/oos/oo.jpg" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
-Calc 42
+Online OS
 </h3>
 </div>
 </a>  
