--- a/projects.html
+++ b/projects.html
@@ -178,7 +178,15 @@ Calc 42
 Online OS
 </h3>
 </div>
-</a>  
+</a> 
+<a href="https://zakerytclarke.github.io/marmoteditor">
+<div style="float:left; width:24%;">
+<img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Online OS
+</h3>
+</div>
+</a>    
   
   
 
