--- a/projects.html
+++ b/projects.html
@@ -28,10 +28,12 @@ text-decoration:none;
 <div style="z-index:100;width:102%;margin-left:-2%; position:absolute;top:4%;background-color:rgba(0,0,0,1); color:white;font-size:200%;">
 <div style="opacity:1;">
 <div style="width:50%;">
+<a href="https://zakerytclarke.github.io">  
 <h1 style="float:left;padding-left:30px;font-size:50px;">
 Zakery Clarke
 </h1>
-</div>
+  </a>
+  </div>
 <div style="width:50%;float:right;padding-top:2%;">
 <a href="mailto:zakeryt@zakeryclarke.com">
 zakeryt@zakeryclarke.com
