--- a/projects.html
+++ b/projects.html
@@ -174,7 +174,7 @@ Calc 42
 </div>
 </a>
 <a href="https://zakerytclarke.github.io/oos">
-<div style="float:left; width:24%;">
+<div style="float:left; width:24%;overflow:hidden;">
 <img src="https://zakerytclarke.github.io/oos/oo.jpg" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Online OS
@@ -185,7 +185,7 @@ Online OS
 <div style="float:left; width:24%;">
 <img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
-Online OS
+Marmot Editor
 </h3>
 </div>
 </a>    
