--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@ zakeryt@zakeryclarke.com
 <br>
 
   
- <div id="tall" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:7%;margin-top:0;padding-top:10%;">
+ <div id="tall" style="color:white;width:100%;display:block; height:auto;top:7%;margin-top:0;padding-top:10%;">
 
 <a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:49%;">
@@ -136,7 +136,7 @@ Atlas Calc
   
   
 <br>
-<div id="wide" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:10%;margin-top:0;padding-top:10%;">
+<div id="wide" style="color:white;width:100%;display:block; height:auto;top:10%;margin-top:0;padding-top:10%;">
 
 <a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:24%;">
