--- a/index.html
+++ b/index.html
@@ -166,6 +166,57 @@ Codepen
 </h3>
 </div>
 </a>
+
+<a href="https://emmaxbuck.github.io">
+<div style="float:left; width:24%;">
+<img src="emma.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Emmaxbuck
+</h3>
+</div>
+</a>  
+  
+<a href="https://zakerytclarke.github.io/urlembeder">
+<div style="float:left; width:24%;">
+<img src="urlembeder.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+URL Embeder
+</h3>
+</div>
+</a>
+  
+<a href="https://zakerytclarke.github.io/calc42">
+<div style="float:left; width:24%;">
+<img src="https://zakerytclarke.github.io/calc42/42.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Calc 42
+</h3>
+</div>
+</a>
+<a href="https://zakerytclarke.github.io/oos">
+<div style="float:left; width:20%;overflow:hidden;">
+<img src="https://zakerytclarke.github.io/oos/oo.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Online OS
+</h3>
+</div>
+</a> 
+<a href="https://zakerytclarke.github.io/marmoteditor">
+<div style="float:left; width:24%;">
+<img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Marmot Editor
+</h3>
+</div>
+</a>    
+  
+  
+  
+  
+  
+  
+  
+  
   
 </div>
 
