--- a/index.html
+++ b/index.html
@@ -70,21 +70,12 @@ Portfolio
 </h3>
 </div>
 </a>
-
-<a href="https://zakerytclarke.github.io/projects.html">
-<div style="float:left; width:49%;">
-<img src="website.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Projects
-</h3>
-</div>
-</a>
-
+   
 <a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
 <div style="float:left; width:49%;">
 <img src="android.jpg" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
-Android Apps
+Atlas Calc
 </h3>
 </div>
 </a>
@@ -131,23 +122,15 @@ Portfolio
 </div>
 </a>
 
-<a href="https://zakerytclarke.github.io/projects.html">
+<a href="https://codepen.io/zakerytclarke/">
 <div style="float:left; width:24%;">
-<img src="website.png" style="width:80%;border-radius:50%;">
+<img src="codepen.png" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
-Projects
+Codepen
 </h3>
 </div>
 </a>
 
-<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
-<div style="float:left; width:24%;">
-<img src="android.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Android Apps
-</h3>
-</div>
-</a>
 
 <a href="https://zakeryclarkephotography.wordpress.com/">
 <div style="float:left; width:24%;">
@@ -158,14 +141,6 @@ Photography
 </div>
 </a>
 
-<a href="https://codepen.io/zakerytclarke/">
-<div style="float:left; width:24%;">
-<img src="codepen.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Codepen
-</h3>
-</div>
-</a>
 
 <a href="https://emmaxbuck.github.io">
 <div style="float:left; width:24%;">
@@ -184,6 +159,16 @@ URL Embeder
 </h3>
 </div>
 </a>
+
+  
+<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
+<div style="float:left; width:24%;">
+<img src="android.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Atlas Calc
+</h3>
+</div>
+</a>
   
 <a href="https://zakerytclarke.github.io/calc42">
 <div style="float:left; width:24%;">
@@ -193,22 +178,6 @@ Calc 42
 </h3>
 </div>
 </a>
-<a href="https://zakerytclarke.github.io/oos">
-<div style="float:left; width:20%;overflow:hidden;">
-<img src="https://zakerytclarke.github.io/oos/oo.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Online OS
-</h3>
-</div>
-</a> 
-<a href="https://zakerytclarke.github.io/marmoteditor">
-<div style="float:left; width:24%;">
-<img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Marmot Editor
-</h3>
-</div>
-</a>    
   
   
   
