--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ URL Embeder
   
 <a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
 <div style="float:left; width:24%;">
-<img src="android.jpg" style="width:80%;border-radius:50%;">
+<img src="https://lh3.googleusercontent.com/9af7y8YrSe4mHKVoZSkIC_RHDPFdSEv2Jx3SLwrYY-Ha2oYuxYUY5PMULbG2KmLAhNs=w300-rw" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Atlas Calc
 </h3>
