--- a/index.html
+++ b/index.html
@@ -179,7 +179,14 @@ Calc 42
 </div>
 </a>
   
-  
+<a href="https://zakerytclarke.github.io/marmoteditor">
+<div style="float:left; width:24%;">
+<img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Marmot Editor
+</h3>
+</div>
+</a>      
   
   
   
