--- a/index.html
+++ b/index.html
@@ -187,7 +187,14 @@ Marmot Editor
 </h3>
 </div>
 </a>      
-  
+<a href="https://zakerytclarke.github.io/oos">
+<div style="float:left; width:20%;overflow:hidden;">
+<img src="https://zakerytclarke.github.io/oos/oo.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Online OS
+</h3>
+</div>
+</a>   
   
   
   
