--- a/index.html
+++ b/index.html
@@ -62,29 +62,12 @@ Hire me
 </h3>
 </div>
 </a>
+  
 <a href="https://github.com/zakerytclarke">
 <div style="float:left; width:49%;">
 <img src="github.gif" style="width:80%;border-radius:50%;">
 <h3 style="text-align:center;">
 Portfolio
-</h3>
-</div>
-</a>
-   
-<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
-<div style="float:left; width:49%;">
-<img src="android.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Atlas Calc
-</h3>
-</div>
-</a>
-
-<a href="https://zakeryclarkephotography.wordpress.com/">
-<div style="float:left; width:49%;">
-<img src="photo.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Photography
 </h3>
 </div>
 </a>
@@ -97,6 +80,59 @@ Codepen
 </h3>
 </div>
 </a>
+
+
+<a href="https://zakeryclarkephotography.wordpress.com/">
+<div style="float:left; width:49%;">
+<img src="photo.jpg" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Photography
+</h3>
+</div>
+</a>
+
+
+<a href="https://emmaxbuck.github.io">
+<div style="float:left; width:49%;">
+<img src="emma.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Emmaxbuck
+</h3>
+</div>
+</a>  
+  
+<a href="https://zakerytclarke.github.io/urlembeder">
+<div style="float:left; width:49%;">
+<img src="urlembeder.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+URL Embeder
+</h3>
+</div>
+</a>
+
+  
+<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
+<div style="float:left; width:49%;">
+<img src="https://lh3.googleusercontent.com/9af7y8YrSe4mHKVoZSkIC_RHDPFdSEv2Jx3SLwrYY-Ha2oYuxYUY5PMULbG2KmLAhNs=w300-rw" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Atlas Calc
+</h3>
+</div>
+</a>
+  
+<a href="https://zakerytclarke.github.io/calc42">
+<div style="float:left; width:49%;">
+<img src="https://zakerytclarke.github.io/calc42/42.png" style="width:80%;border-radius:50%;">
+<h3 style="text-align:center;">
+Calc 42
+</h3>
+</div>
+</a>
+  
+
+   
+   
+   
    
 </div>
 
@@ -179,23 +215,7 @@ Calc 42
 </div>
 </a>
   
-<a href="https://zakerytclarke.github.io/marmoteditor">
-<div style="float:left; width:24%;">
-<img src="https://zakerytclarke.github.io/marmoteditor/marmot.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Marmot Editor
-</h3>
-</div>
-</a>      
-<a href="https://zakerytclarke.github.io/oos">
-<div style="float:left; width:20%;overflow:hidden;">
-<img src="https://zakerytclarke.github.io/oos/oo.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Online OS
-</h3>
-</div>
-</a>   
-  
+
   
   
   
