--- a/index.html
+++ b/index.html
@@ -1,71 +1,79 @@
 <!doctype html>
 <html>
 <head>
-<meta name="theme-color" content="black" />
+<meta name="theme-color" content="white" />
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <title>
 Zakery Clarke
 </title>
 <style>
-body {
-background-image: url("background.png");
-background-color:white;
-background-size:33.33%;
+body{
+color:black;
+background-color:#efefef;
 }
-a {
-color:white;
+.circle{
+text-align:center;
+width:25%;
+float:left;
+}
+.ca{
+width:10vw;
+height:10vw;
+border-radius:50%;
+position:absolute;
+z-index:-10;
+top:0%;
+}
+img{
+width:80%;border-radius:50%;
+}
+a{
 text-decoration:none;
+color:black;
 }
-
 </style>
 </head>
-<body style="background-color:white;">
+<body>
 
-
-<div style="width:100%; text-align: center;">
-<img src="bg.png" style="width:100% position:relative;top:0;left:10%;">
-<div style="z-index:100;width:102%;margin-left:-2%; position:absolute;top:4%;background-color:rgba(0,0,0,1); color:white;font-size:200%;">
-<div style="opacity:1;">
-<div style="width:50%;">
-<h1 style="float:left;padding-left:30px;font-size:50px;">
+<div style="width:100%;padding:10px;margin-bottom:5%;">
+<h1>
 Zakery Clarke
 </h1>
-</div>
-<div style="width:50%;float:right;padding-top:2%;">
-<a href="mailto:zakeryt@zakeryclarke.com">
-zakeryt@zakeryclarke.com
+<div style="right:0;top:0;position:absolute;">
+<a href="mailto:zakerytclarke@gmail.com">
+<h3>
+zakerytclarke@gmail.com
+</h3>
 </a>
-<br>
-<a href="tel:15052349665">
-1.505.336.0208
+<a href="tel:1(505)234-9665">
+<h3>
+1.505.234.9665
+</h3> 
 </a>
-<br>
-</div>
-
 </div>
 </div>
 
+<div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;">
+</div>
+<div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;">
+</div>
+<div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;">
+</div>
 
 
-<br>
-<div style="width:100%;margin-left:-30px;padding-left:30px;float:none; background-color:rgba(0,0,0,0.7);opacity:100.9;position:absolute;top:10vh;padding-top:20vh;margin-top:-10%;padding-top:-10%;">
-<br>
-
-  
- <div id="tall" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:7%;margin-top:0;padding-top:10%;">
 <a href="https://www.fiverr.com/zakerytclarke">
-<div style="float:left; width:49%;">
-<img src="fiverr.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
+<div class="circle">
+<img src="fiverr.png">
+<h3>
 Hire me
 </h3>
 </div>
 </a>
   
 <a href="https://github.com/zakerytclarke">
-<div style="float:left; width:49%;">
-<img src="github.gif" style="width:80%;border-radius:50%;">
+<div class="circle">
+<img src="github.gif">
 <h3 style="text-align:center;">
 Portfolio
 </h3>
@@ -73,8 +81,8 @@ Portfolio
 </a>
 
 <a href="https://codepen.io/zakerytclarke/">
-<div style="float:left; width:49%;">
-<img src="codepen.png" style="width:80%;border-radius:50%;">
+<div class="circle">
+<img src="codepen.png">
 <h3 style="text-align:center;">
 Codepen
 </h3>
@@ -83,8 +91,8 @@ Codepen
 
 
 <a href="https://zakeryclarkephotography.wordpress.com/">
-<div style="float:left; width:49%;">
-<img src="photo.jpg" style="width:80%;border-radius:50%;">
+<div class="circle">
+<img src="photo.jpg">
 <h3 style="text-align:center;">
 Photography
 </h3>
@@ -93,8 +101,8 @@ Photography
 
 
 <a href="https://emmaxbuck.github.io">
-<div style="float:left; width:49%;">
-<img src="emma.png" style="width:80%;border-radius:50%;">
+<div class="circle">
+<img src="emma.png">
 <h3 style="text-align:center;">
 Emmaxbuck
 </h3>
@@ -102,8 +110,8 @@ Emmaxbuck
 </a>  
   
 <a href="https://zakerytclarke.github.io/urlembeder">
-<div style="float:left; width:49%;">
-<img src="urlembeder.png" style="width:80%;border-radius:50%;">
+<div class="circle">
+<img src="urlembeder.png">
 <h3 style="text-align:center;">
 URL Embeder
 </h3>
@@ -112,8 +120,8 @@ URL Embeder
 
   
 <a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
-<div style="float:left; width:49%;">
-<img src="https://lh3.googleusercontent.com/9af7y8YrSe4mHKVoZSkIC_RHDPFdSEv2Jx3SLwrYY-Ha2oYuxYUY5PMULbG2KmLAhNs=w300-rw" style="width:80%;border-radius:50%;">
+<div class="circle">
+<img src="https://lh3.googleusercontent.com/9af7y8YrSe4mHKVoZSkIC_RHDPFdSEv2Jx3SLwrYY-Ha2oYuxYUY5PMULbG2KmLAhNs=w300-rw">
 <h3 style="text-align:center;">
 Atlas Calc
 </h3>
@@ -121,132 +129,20 @@ Atlas Calc
 </a>
   
 <a href="https://zakerytclarke.github.io/calc42">
-<div style="float:left; width:49%;">
-<img src="https://zakerytclarke.github.io/calc42/42.png" style="width:80%;border-radius:50%;">
+<div class="circle">
+<img src="https://zakerytclarke.github.io/calc42/42.png">
 <h3 style="text-align:center;">
 Calc 42
 </h3>
 </div>
 </a>
-  
 
-   
-   
-   
-   
-</div>
-
-  
-  
-<br>
-<div id="wide" style="color:white;padding-top:0%;width:100%;display:block; height:auto;top:10%;margin-top:0;padding-top:10%;">
-<a href="https://www.fiverr.com/zakerytclarke">
-<div style="float:left; width:24%;">
-<img src="fiverr.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Hire me
-</h3>
-</div>
-</a>
-  
-<a href="https://github.com/zakerytclarke">
-<div style="float:left; width:24%;">
-<img src="github.gif" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Portfolio
-</h3>
-</div>
-</a>
-
-<a href="https://codepen.io/zakerytclarke/">
-<div style="float:left; width:24%;">
-<img src="codepen.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Codepen
-</h3>
-</div>
-</a>
-
-
-<a href="https://zakeryclarkephotography.wordpress.com/">
-<div style="float:left; width:24%;">
-<img src="photo.jpg" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Photography
-</h3>
-</div>
-</a>
-
-
-<a href="https://emmaxbuck.github.io">
-<div style="float:left; width:24%;">
-<img src="emma.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Emmaxbuck
-</h3>
-</div>
-</a>  
-  
-<a href="https://zakerytclarke.github.io/urlembeder">
-<div style="float:left; width:24%;">
-<img src="urlembeder.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-URL Embeder
-</h3>
-</div>
-</a>
-
-  
-<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
-<div style="float:left; width:24%;">
-<img src="https://lh3.googleusercontent.com/9af7y8YrSe4mHKVoZSkIC_RHDPFdSEv2Jx3SLwrYY-Ha2oYuxYUY5PMULbG2KmLAhNs=w300-rw" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Atlas Calc
-</h3>
-</div>
-</a>
-  
-<a href="https://zakerytclarke.github.io/calc42">
-<div style="float:left; width:24%;">
-<img src="https://zakerytclarke.github.io/calc42/42.png" style="width:80%;border-radius:50%;">
-<h3 style="text-align:center;">
-Calc 42
-</h3>
-</div>
-</a>
-  
-
-  
-  
-  
-  
-  
-</div>
-
-
-
-
-
-
-
-
-
-
-</div>
-</div>
-
-</div>
-</div>
 <script>
-
 if (screen.height>screen.width) {
-document.getElementById('tall').style.display = 'block';
-document.getElementById('wide').style.display = 'none';
-
-} else {
-document.getElementById('wide').style.display = 'block';
-document.getElementById('tall').style.display = 'none';
-
+var elms = document.getElementsByClassName('circle');
+for(var i=0;i<elms.length;i++){
+elms[i].style.width="50%";
+}
 }
 
 </script>
