--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ background-color:#efefef;
 text-align:center;
 width:25%;
 float:left;
+overflow:hidden;
 }
 .ca{
 width:10vw;
@@ -55,6 +56,7 @@ zakerytclarke@gmail.com
 </div>
 
 <div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;">
+<img src="zak.jpg" style="width:100%;> 
 </div>
 <div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;">
 </div>
