--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ zakerytclarke@gmail.com
 </div>
 
 <div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;">
-<img src="zak.jpg" style="width:100%;> 
+<img src="zak.jpg" style="width:100%;"> 
 </div>
 <div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;">
 </div>
@@ -143,7 +143,7 @@ Calc 42
 if (screen.height>screen.width) {
 var elms = document.getElementsByClassName('circle');
 for(var i=0;i<elms.length;i++){
-elms[i].style.width="50%";
+elms[i].style.width="33.3%";
 }
 }
 
