--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@ zakerytclarke@gmail.com
 </div>
 
 <div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;">
-<img src="zak.jpg" style="width:100%;"> 
 </div>
 <div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;">
 </div>
 <div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;">
 </div>
-
+  
+<div class="ca" style="left:50%;">
+<img src="zak.jpg" style="width:100%;"> 
+</div>
 
 <a href="https://www.fiverr.com/zakerytclarke">
 <div class="circle">
