--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@ a{
 text-decoration:none;
 color:black;
 }
+
+@keyframes c1{
+  0%{top:100%;}
+  100%{top:0%;}
+}
+  @keyframes c2{
+  0%{top:100%;left:100%;}
+  100%{top:0%;left:7%;}
+}
+  @keyframes c3{
+  0%{left:100%;}
+  100%{left:14%;}
+}
 </style>
 </head>
 <body>
@@ -55,11 +68,11 @@ zakerytclarke@gmail.com
 </div>
 </div>
 
-<div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;">
+<div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;animation:c1 3s;">
 </div>
-<div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;">
+<div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;animation:c2 3s;">
 </div>
-<div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;">
+<div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;animation:c3 3s;">
 </div>
   
 <div class="ca" style="left:45%;">
