--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ color:black;
 <h1>
 Zakery Clarke
 </h1>
-<div style="right:0;top:0;position:absolute;">
+<div style="right:0;top:0;position:absolute;text-align:center;">
 <a href="mailto:zakerytclarke@gmail.com">
 <h3>
 zakerytclarke@gmail.com
@@ -68,11 +68,11 @@ zakerytclarke@gmail.com
 </div>
 </div>
 
-<div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;animation:c1 3s;">
+<div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;animation:c1 2s;">
 </div>
-<div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;animation:c2 3s;">
+<div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;animation:c2 2s;">
 </div>
-<div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;animation:c3 3s;">
+<div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;animation:c3 2s;">
 </div>
   
 <div class="ca" style="left:45%;">
