--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ background-color:#efefef;
 }
 .circle{
 text-align:center;
-width:25%;
-float:left;
+width:24%;
+display:inline-block;
 overflow:hidden;
 }
 .ca{
@@ -63,7 +63,7 @@ zakerytclarke@gmail.com
 <a href="tel:1(505)234-9665">
 <h3>
 1.505.234.9665
-</h3> 
+</h3>
 </a>
 </div>
 </div>
@@ -74,9 +74,9 @@ zakerytclarke@gmail.com
 </div>
 <div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;animation:c3 2s;">
 </div>
-  
+
 <div class="ca" style="left:45%;">
-<img src="zak.jpg" style="width:100%;"> 
+<img src="zak.jpg" style="width:100%;">
 </div>
 
 <a href="https://www.fiverr.com/zakerytclarke">
@@ -87,7 +87,7 @@ Hire me
 </h3>
 </div>
 </a>
-  
+
 <a href="https://github.com/zakerytclarke">
 <div class="circle">
 <img src="github.gif">
@@ -124,8 +124,8 @@ Photography
 Emmaxbuck
 </h3>
 </div>
-</a>  
-  
+</a>
+
 <a href="https://zakerytclarke.github.io/urlembeder">
 <div class="circle">
 <img src="urlembeder.png">
@@ -135,7 +135,7 @@ URL Embeder
 </div>
 </a>
 
-  
+
 <a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
 <div class="circle">
 <img src="https://lh3.googleusercontent.com/9af7y8YrSe4mHKVoZSkIC_RHDPFdSEv2Jx3SLwrYY-Ha2oYuxYUY5PMULbG2KmLAhNs=w300-rw">
@@ -144,7 +144,7 @@ Atlas Calc
 </h3>
 </div>
 </a>
-  
+
 <a href="https://zakerytclarke.github.io/calc42">
 <div class="circle">
 <img src="https://zakerytclarke.github.io/calc42/42.png">
@@ -158,7 +158,7 @@ Calc 42
 if (screen.height>screen.width) {
 var elms = document.getElementsByClassName('circle');
 for(var i=0;i<elms.length;i++){
-elms[i].style.width="33.3%";
+elms[i].style.width="33%";
 }
 }
 
