--- a/resume.html
+++ b/resume.html
@@ -17,6 +17,7 @@ text-align:center;
 width:24%;
 display:inline-block;
 overflow:hidden;
+vertical-align:top;
 }
 .divider{
 width:90%;
@@ -53,8 +54,14 @@ color:black;
   0%{left:100%;}
   100%{left:14%;}
 }
+.descriptor{
+  margin-top:-10px;
+  padding-top:0;
+  text-align:center;
+}
 .menu{
   box-shadow:1px 1px 2px rgba(0,0,0,0.3);
+  background-color: :white;
   display:inline-block;
   color:black;
   padding-right:30px;
@@ -65,7 +72,7 @@ color:black;
 </head>
 <body>
 
-<div style="box-shadow:2px 2px 20px rgba(0,0,0,0.3);left:0;top:0;width:100%;padding:10px;margin-bottom:5%;position:fixed;background-color:white;">
+<div style="box-shadow:2px 2px 20px rgba(0,0,0,0.3);left:0;top:0;width:100%;padding:10px;margin-bottom:5%;position:fixed;background-color:#f2f2f2;">
 <h1 style="z-index:110;position:relative;">
 Zakery Clarke
 </h1>
@@ -130,21 +137,49 @@ Education
 </div>
 
 </div>
+<div class="divider"  style="margin-top:200px;">
+
+    <a href="https://clarkecomputing.gthub.io">
+    <div class="circle">
+    <img src="https://clarkecomputing.github.io/logoblack.png">
+    <h3 style="text-align:center;">
+    Hire Me
+    </h3>
+    </div>
+    </a>
+  <a href="https://github.com/zakerytclarke">
+  <div class="circle">
+  <img src="github.gif">
+  <h3 style="text-align:center;">
+  Portfolio
+  </h3>
+  </div>
+  </a>
+
+  <a href="https://codepen.io/zakerytclarke/">
+  <div class="circle">
+  <img src="codepen.png">
+  <h3 style="text-align:center;">
+  Codepen
+  </h3>
+  </div>
+  </a>
 
 
-<div id="about" class="divider" style="margin-top:200px;">
+</div>
+<div id="about" class="divider">
 <h2>
 About
 </h2>
 <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel tortor sit amet lacus ullamcorper posuere. Suspendisse luctus, est nec maximus finibus, urna nulla varius erat, vitae accumsan risus diam nec velit. Proin interdum ligula dui, sed ullamcorper elit porttitor ac. Curabitur ut eleifend magna. Donec condimentum venenatis ipsum non rhoncus. Sed eu elit sem. Praesent vulputate laoreet eros at tristique.
+Hi there! My name is Zakery Clarke and I am an intrepid computer programmer interested in a variety of topics and fields. My main expertise is in website design. I've been programming for over 8 years and have taught myself everything I know. I also have a strong interest in data analytics, machine learning, and artificial intelligence. I hope yu enjoy my projects and passions.
 </p>
 </div>
 <div id="skills" class="divider">
 <h2>
 Skills
 </h2>
-<a href="https://www.fiverr.com/zakerytclarke">
+<a href="https://clarkecomputing.github.io/">
 <div class="circle">
 <img src="fiverr.png">
 <h3>
@@ -166,12 +201,133 @@ Work Experience
 Projects
 </h2>
 
+<a href="https://emmaxbuck.github.io/dingo.js">
+<div class="circle">
+<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
+<h3 style="text-align:center;">
+Dingo.js
+</h3>
+<p class="descriptor">
+A lightweight JS framework for component developement<br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
+
+<a href="https://github.com/zakerytclarke/unmappcontest2017">
+<div class="circle">
+<img src="https://zakerytclarke.github.io/unmappcontest2017/lobosafe.png">
+<h3 style="text-align:center;">
+LoboSafe
+</h3>
+<p class="descriptor">
+UNM App Contest Finalist<br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
+
+<a href="https://emmaxbuck.github.io">
+<div class="circle">
+<img src="emma.png">
+<h3 style="text-align:center;">
+Emmaxbuck
+</h3>
+<p class="descriptor">
+Photography Website for EmmaxBuck Photography <br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
+
+<a href="http://www.e-transcontrol.com">
+<div class="circle">
+<img src="e-transcontrol.png">
+<h3 style="text-align:center;">
+E-TransControl
+</h3>
+<p class="descriptor">
+After-Market Car Upgrades Website for E-TransControl<br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
+
+
+<a href="https://zakerytclarke.github.io/urlembeder">
+<div class="circle">
+<img src="urlembeder.png">
+<h3 style="text-align:center;">
+URL Embeder
+</h3>
+<p class="descriptor">
+Clever Testing Server for JS<br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
+
+
+<a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
+<div class="circle">
+<img src="https://lh3.googleusercontent.com/9af7y8YrSe4mHKVoZSkIC_RHDPFdSEv2Jx3SLwrYY-Ha2oYuxYUY5PMULbG2KmLAhNs=w300-rw">
+<h3 style="text-align:center;">
+Atlas Calc
+</h3>
+<p class="descriptor">
+A functional calculator with advanced graphing, unit conversions, and more<br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
+
+<a href="https://zakerytclarke.github.io/calc42">
+<div class="circle">
+<img src="https://zakerytclarke.github.io/calc42/42.png">
+<h3 style="text-align:center;">
+Calc 42
+</h3>
+<p class="descriptor">
+Programable Postfix Calculator<br>
+<b>Sole Developer</b>
+</p>
+</div>
+</a>
 </div>
 
 <div id="passions" class="divider">
 <h2>
 Passions
 </h2>
+<a href="https://zakeryclarkephotography.wordpress.com/">
+<div class="circle">
+<img src="photo.jpg">
+<h3 style="text-align:center;">
+Traveling
+</h3>
+</div>
+</a>
+<div class="circle">
+<img src="bp.jpg">
+<h3 style="text-align:center;">
+Backpacking
+</h3>
+</div>
+<div class="circle">
+<img src="bp.jpg">
+<h3 style="text-align:center;">
+Sustainable Living
+</h3>
+</div>
+
+<a href="https://zakeryclarkephotography.wordpress.com/">
+<div class="circle">
+<img src="photo.jpg">
+<h3 style="text-align:center;">
+Photography
+</h3>
+</div>
+</a>
 
 </div>
 
