--- a/resume.html
+++ b/resume.html
@@ -201,7 +201,7 @@ Work Experience
 Projects
 </h2>
 
-<a href="https://zakerytclarke.github.io/dingo.js>
+<a href="https://zakerytclarke.github.io/dingo.js">
 <div class="circle">
 <img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
 <h3 style="text-align:center;">
@@ -213,9 +213,10 @@ A lightweight JS framework for component developement<br>
 </p>
 </div>
 </a>
+                     
 
                      
-<a href="https://zakerytclarke.github.io/nautilus.js>
+<a href="https://zakerytclarke.github.io/nautilus.js">
 <div class="circle">
 <img src="https://zakerytclarke.github.io/nautilus.js/nautilus.jpg">
 <h3 style="text-align:center;">
