--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@ text-align:center;
 width:24%;
 display:inline-block;
 overflow:hidden;
+vertical-align:top;
+}
+.divider{
+width:90%;
+border-top:3px black solid;
+border-bottom:3px; black solid;
+display:block;
+margin-left:5%;
+padding:15px;
 }
 .ca{
 width:10vw;
@@ -33,7 +42,6 @@ a{
 text-decoration:none;
 color:black;
 }
-
 @keyframes c1{
   0%{top:100%;}
   100%{top:0%;}
@@ -46,15 +54,29 @@ color:black;
   0%{left:100%;}
   100%{left:14%;}
 }
+.descriptor{
+  margin-top:-10px;
+  padding-top:0;
+  text-align:center;
+}
+.menu{
+  box-shadow:1px 1px 2px rgba(0,0,0,0.3);
+  background-color: :white;
+  display:inline-block;
+  color:black;
+  padding-right:30px;
+  padding-left:30px;
+  padding:5px;
+}
 </style>
 </head>
 <body>
 
-<div style="width:100%;padding:10px;margin-bottom:5%;">
-<h1>
+<div style="box-shadow:2px 2px 20px rgba(0,0,0,0.3);left:0;top:0;width:100%;padding:10px;margin-bottom:5%;position:fixed;background-color:#f2f2f2;">
+<h1 style="z-index:110;position:relative;">
 Zakery Clarke
 </h1>
-<div style="right:0;top:0;position:absolute;text-align:center;">
+<div style="right:0px;top:0;position:absolute;text-align:right;margin-right:50px;z-index:101;">
 <a href="mailto:zakerytclarke@gmail.com">
 <h3>
 zakerytclarke@gmail.com
@@ -66,20 +88,98 @@ zakerytclarke@gmail.com
 </h3>
 </a>
 </div>
+
+<div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;animation:c1 2s;position:fixed;z-index:100;">
+</div>
+<div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;animation:c2 2s;position:fixed;z-index:100;">
+</div>
+<div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;animation:c3 2s;position:fixed;z-index:100;">
 </div>
 
-<div class="ca" style="background-color:rgba(255,0,0,0.6);left:0%;animation:c1 2s;">
-</div>
-<div class="ca" style="background-color:rgba(0,0,255,0.6);left:7%;animation:c2 2s;">
-</div>
-<div class="ca" style="background-color:rgba(0,255,0,0.6);left:14%;animation:c3 2s;">
-</div>
-
-<div class="ca" style="left:45%;">
+<div class="ca" style="left:45%;position:fixed;z-index:101;">
 <img src="zak.jpg" style="width:100%;">
 </div>
 
-<a href="https://www.fiverr.com/zakerytclarke">
+
+<div style="margin-top:40px;text-align:center;width:96%;margin-left:1%;display:block;">
+
+<a href="#about">
+<h2 class="menu">
+About
+</h2>
+</a>
+
+<a href="#skills">
+<h2 class="menu">
+Skills
+</h2>
+</a>
+<a href="#work">
+<h2 class="menu">
+Work Experience
+</h2>
+</a>
+<a href="#projects">
+<h2 class="menu">
+Projects
+</h2>
+</a>
+<a href="#passions">
+<h2 class="menu">
+Passions
+</h2>
+</a>
+<a href="#education">
+<h2 class="menu">
+Education
+</h2>
+</a>
+</div>
+
+</div>
+<div class="divider"  style="margin-top:200px;">
+
+    <a href="https://clarkecomputing.gthub.io">
+    <div class="circle">
+    <img src="https://clarkecomputing.github.io/logoblack.png">
+    <h3 style="text-align:center;">
+    Hire Me
+    </h3>
+    </div>
+    </a>
+  <a href="https://github.com/zakerytclarke">
+  <div class="circle">
+  <img src="github.gif">
+  <h3 style="text-align:center;">
+  Portfolio
+  </h3>
+  </div>
+  </a>
+
+  <a href="https://codepen.io/zakerytclarke/">
+  <div class="circle">
+  <img src="codepen.png">
+  <h3 style="text-align:center;">
+  Codepen
+  </h3>
+  </div>
+  </a>
+
+
+</div>
+<div id="about" class="divider">
+<h2>
+About
+</h2>
+<p>
+Hi there! My name is Zakery Clarke and I am an intrepid computer programmer interested in a variety of topics and fields. My main expertise is in website design. I've been programming for over 8 years and have taught myself everything I know. I also have a strong interest in data analytics, machine learning, and artificial intelligence. I hope yu enjoy my projects and passions.
+</p>
+</div>
+<div id="skills" class="divider">
+<h2>
+Skills
+</h2>
+<a href="https://clarkecomputing.github.io/">
 <div class="circle">
 <img src="fiverr.png">
 <h3>
@@ -87,35 +187,45 @@ Hire me
 </h3>
 </div>
 </a>
+</div>
 
-<a href="https://github.com/zakerytclarke">
+<div id="work" class="divider">
+<h2>
+Work Experience
+</h2>
+
+</div>
+
+<div id="projects" class="divider">
+<h2>
+Projects
+</h2>
+
+<a href="https://emmaxbuck.github.io/dingo.js">
 <div class="circle">
-<img src="github.gif">
+<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
 <h3 style="text-align:center;">
-Portfolio
+Dingo.js
 </h3>
+<p class="descriptor">
+A lightweight JS framework for component developement<br>
+<b>Lead Developer</b>
+</p>
 </div>
 </a>
 
-<a href="https://codepen.io/zakerytclarke/">
+<a href="https://github.com/zakerytclarke/unmappcontest2017">
 <div class="circle">
-<img src="codepen.png">
+<img src="https://zakerytclarke.github.io/unmappcontest2017/lobosafe.png">
 <h3 style="text-align:center;">
-Codepen
+LoboSafe
 </h3>
+<p class="descriptor">
+UNM App Contest Finalist<br>
+<b>Lead Developer</b>
+</p>
 </div>
 </a>
-
-
-<a href="https://zakeryclarkephotography.wordpress.com/">
-<div class="circle">
-<img src="photo.jpg">
-<h3 style="text-align:center;">
-Photography
-</h3>
-</div>
-</a>
-
 
 <a href="https://emmaxbuck.github.io">
 <div class="circle">
@@ -123,9 +233,25 @@ Photography
 <h3 style="text-align:center;">
 Emmaxbuck
 </h3>
+<p class="descriptor">
+Photography Website for EmmaxBuck Photography <br>
+<b>Lead Developer</b>
+</p>
 </div>
 </a>
 
+<a href="http://www.e-transcontrol.com">
+<div class="circle">
+<img src="e-transcontrol.png">
+<h3 style="text-align:center;">
+E-TransControl
+</h3>
+<p class="descriptor">
+After-Market Car Upgrades Website for E-TransControl<br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
 
 <a href="https://github.com/zakerytclarke/server.php">
 <div class="circle">
@@ -133,16 +259,23 @@ Emmaxbuck
 <h3 style="text-align:center;">
 SERVER.PHP
 </h3>
+<p class="descriptor">
+Lightweight PHP File Manager<br>
+<b>Lead Developer</b>
+</p>
 </div>
 </a>
-  
-  
+
 <a href="https://zakerytclarke.github.io/urlembeder">
 <div class="circle">
 <img src="urlembeder.png">
 <h3 style="text-align:center;">
 URL Embeder
 </h3>
+<p class="descriptor">
+Clever Testing Server for JS<br>
+<b>Lead Developer</b>
+</p>
 </div>
 </a>
 
@@ -153,6 +286,10 @@ URL Embeder
 <h3 style="text-align:center;">
 Atlas Calc
 </h3>
+<p class="descriptor">
+A functional calculator with advanced graphing, unit conversions, and more<br>
+<b>Lead Developer</b>
+</p>
 </div>
 </a>
 
@@ -162,9 +299,58 @@ Atlas Calc
 <h3 style="text-align:center;">
 Calc 42
 </h3>
+<p class="descriptor">
+Programable Postfix Calculator<br>
+<b>Sole Developer</b>
+</p>
+</div>
+</a>
+</div>
+
+<div id="passions" class="divider">
+<h2>
+Passions
+</h2>
+<a href="https://zakeryclarkephotography.wordpress.com/">
+<div class="circle">
+<img src="photo.jpg">
+<h3 style="text-align:center;">
+Traveling
+</h3>
+</div>
+</a>
+<div class="circle">
+<img src="bp.jpg">
+<h3 style="text-align:center;">
+Backpacking
+</h3>
+</div>
+<div class="circle">
+<img src="bp.jpg">
+<h3 style="text-align:center;">
+Sustainable Living
+</h3>
+</div>
+
+<a href="https://zakeryclarkephotography.wordpress.com/">
+<div class="circle">
+<img src="photo.jpg">
+<h3 style="text-align:center;">
+Photography
+</h3>
 </div>
 </a>
 
+</div>
+
+
+
+<div id="education" class="divider">
+<h2>
+Education
+</h2>
+
+</div>
 <script>
 if (screen.height>screen.width) {
 var elms = document.getElementsByClassName('circle');
@@ -172,7 +358,6 @@ for(var i=0;i<elms.length;i++){
 elms[i].style.width="33%";
 }
 }
-
 </script>
 </body>
 </html>
