--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ color:black;
   padding-left:30px;
   padding:5px;
 }
+.menu:hover{
+ background-color:#f7f7f7;
+  }  
 </style>
 </head>
 <body>
@@ -320,7 +323,7 @@ Traveling
 </div>
 </a>
 <div class="circle">
-<img src="bp.jpg">
+<img src="nmbp.jpg">
 <h3 style="text-align:center;">
 Backpacking
 </h3>
