--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ color:black;
 }
 .menu{
   box-shadow:1px 1px 2px rgba(0,0,0,0.3);
-  background-color: :white;
+  background-color:#e0e0e0;
   display:inline-block;
   color:black;
   padding-right:30px;
