--- a/index.html
+++ b/index.html
@@ -272,15 +272,28 @@ A functional calculator with advanced graphing, unit conversions, and more<br>
 </p>
 </div>
 </a>
-
-  
   
 </div>
+  
   <div class="divider">
   <h2>
   Website Portfolio
   </h2>
-<a href="https://emmaxbuck.github.io">
+
+<a href="https://clarkecomputing.github.io">
+<div class="circle">
+<img src="emma.png">
+<h3 style="text-align:center;">
+Clarke Computing
+</h3>
+<p class="descriptor">
+Business Website<br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
+    
+ <a href="https://emmaxbuck.github.io">
 <div class="circle">
 <img src="emma.png">
 <h3 style="text-align:center;">
@@ -306,7 +319,7 @@ After-Market Car Upgrades Website for E-TransControl<br>
 </div>
 </a>
   
-  </div>
+</div>
   
   <div class="divider">
   <h2>
@@ -324,9 +337,9 @@ After-Market Car Upgrades Website for E-TransControl<br>
   </p>
   </div>
   </a>
- 
+  
   </div>
-
+  </div>
 
 <div id="passions" class="divider">
 <h2>
