--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ color:black;
 }
 .menu:hover{
  background-color:white;
-  }  
+  }
 </style>
 </head>
 <body>
@@ -134,7 +134,7 @@ Passions
 </a>
 <a href="#education">
 <h2 class="menu">
-Education
+Samples
 </h2>
 </a>
 </div>
@@ -142,9 +142,9 @@ Education
 </div>
 <div class="divider"  style="margin-top:200px;">
 
-    <a href="https://clarkecomputing.gthub.io">
+    <a href="https://clarkecomputing.github.io">
     <div class="circle">
-    <img src="https://clarkecomputing.github.io/logoblack.png">
+    <img src="https://clarkecomputing.github.io/logoblack.png"  style="background-color:white;">
     <h3 style="text-align:center;">
     Hire Me
     </h3>
@@ -170,30 +170,89 @@ Education
 
 
 </div>
-<div id="about" class="divider">
-<h2>
+<div class="divider">
+<h2 id="about">
 About
 </h2>
 <p>
-Hi there! My name is Zakery Clarke and I am an intrepid computer programmer interested in a variety of topics and fields. My main expertise is in website design. I've been programming for over 8 years and have taught myself everything I know. I also have a strong interest in data analytics, machine learning, and artificial intelligence. I hope you enjoy my projects and passions.
+Motivated. Self Taught. Passionate.
 </p>
 </div>
-<div id="skills" class="divider">
-<h2>
+<div class="divider">
+<h2  id="skills">
 Skills
 </h2>
-<a href="https://clarkecomputing.github.io/">
-<div class="circle">
-<img src="fiverr.png">
-<h3>
-Hire me
-</h3>
+
+<div class="divider" style="width:20%;display:inline-block;text-align:center;vertical-align:top;">
+<h2>
+<u>
+Expertise
+</u>
+</h2>
+<div class="circle" style="width:100%;">
+<img src="js.png">
 </div>
-</a>
+<div class="circle" style="width:100%;">
+<img src="html.png">
+</div>
+<div class="circle" style="width:100%;">
+<img src="css.png">
 </div>
 
-<div id="work" class="divider">
+</div>
+
+<div class="divider" style="width:20%;display:inline-block;text-align:center;vertical-align:top;">
 <h2>
+<u>
+Proficient
+</u>
+</h2>
+<div class="circle" style="width:100%;">
+<img src="wordpress.png">
+<h3 style="text-align:center;">
+WordPress
+</h3>
+</div>
+<div class="circle" style="width:100%;">
+<img src="php.png">
+<h3 style="text-align:center;">
+PHP
+</h3>
+</div>
+
+<div class="circle" style="width:100%;">
+<img src="mp.jpg">
+<h3 style="text-align:center;">
+Embeded C/C++
+</h3>
+</div>
+
+</div>
+
+<div class="divider" style="width:20%;display:inline-block;text-align:center;vertical-align:top;">
+<h2>
+<u>
+Learning
+</u>
+</h2>
+<div class="circle" style="width:100%;">
+<img src="ml.jpg">
+<h3 style="text-align:center;">
+Data Science
+</h3>
+</div>
+<div class="circle" style="width:100%;">
+<img src="python.png">
+<h3 style="text-align:center;">
+Python
+</h3>
+</div>
+</div>
+
+
+</div>
+<div class="divider">
+<h2  id="work">
 Work Experience
 </h2>
 
@@ -203,9 +262,9 @@ Work Experience
 <h2>
 Projects
 </h2>
-  
+
 <div class="divider">
-  
+
 <a href="https://zakerytclarke.github.io/dingo.js">
 <div class="circle">
 <img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
@@ -219,7 +278,18 @@ A lightweight JS framework for component developement<br>
 </div>
 </a>
 
-
+<a href="https://github.com/zakerytclarke/nautilus.js">
+<div class="circle">
+<img src="https://zakerytclarke.github.io/nautilus.js/nautilus.jpg">
+<h3 style="text-align:center;">
+Nautilus.js
+</h3>
+<p class="descriptor">
+A JS library to create and train Neural Networks in browser<br>
+<b>Lead Developer</b>
+</p>
+</div>
+</a>
 
 <a href="https://github.com/zakerytclarke/server.php">
 <div class="circle">
@@ -259,7 +329,7 @@ Programable Postfix Calculator<br>
 </p>
 </div>
 </a>
-  
+
   <a href="https://play.google.com/store/apps/details?id=appinventor.ai_zakerytclarke.atlascalc">
 <div class="circle">
 <img src="https://lh3.googleusercontent.com/9af7y8YrSe4mHKVoZSkIC_RHDPFdSEv2Jx3SLwrYY-Ha2oYuxYUY5PMULbG2KmLAhNs=w300-rw">
@@ -272,9 +342,9 @@ A functional calculator with advanced graphing, unit conversions, and more<br>
 </p>
 </div>
 </a>
-  
+
 </div>
-  
+
   <div class="divider">
   <h2>
   Website Portfolio
@@ -292,7 +362,7 @@ Business Website<br>
 </p>
 </div>
 </a>
-    
+
  <a href="https://emmaxbuck.github.io">
 <div class="circle">
 <img src="emma.png">
@@ -318,9 +388,9 @@ After-Market Car Upgrades Website for E-TransControl<br>
 </p>
 </div>
 </a>
-  
+
 </div>
-  
+
   <div class="divider">
   <h2>
   Competitions
@@ -337,12 +407,12 @@ After-Market Car Upgrades Website for E-TransControl<br>
   </p>
   </div>
   </a>
-  
+
   </div>
   </div>
 
-<div id="passions" class="divider">
-<h2>
+<div class="divider">
+<h2 id="passions">
 Passions
 </h2>
 <a href="https://zakeryclarkephotography.wordpress.com/">
@@ -379,12 +449,29 @@ Photography
 
 
 
-<div id="education" class="divider">
-<h2>
-Education
+<div class="divider">
+<h2 id="education" >
+Sample Projects
 </h2>
+<div style="width:48%;display:inline-block;padding:1%;">
+<p data-height="265" data-theme-id="0" data-slug-hash="vWbgJM" data-default-tab="result" data-user="zakerytclarke" data-embed-version="2" data-pen-title="Login Form w/ Google Integration" class="codepen">See the Pen <a href="https://codepen.io/zakerytclarke/pen/vWbgJM/">Login Form w/ Google Integration</a> by Zakery Clarke (<a href="https://codepen.io/zakerytclarke">@zakerytclarke</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+</div>
+<div style="width:48%;display:inline-block;">
+<p data-height="265" data-theme-id="dark" data-slug-hash="ZaRMNv" data-default-tab="result" data-user="zakerytclarke" data-embed-version="2" data-pen-title="Material Design" class="codepen">See the Pen <a href="https://codepen.io/zakerytclarke/pen/ZaRMNv/">Material Design</a> by Zakery Clarke (<a href="https://codepen.io/zakerytclarke">@zakerytclarke</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+</div>
+<div style="width:48%;display:inline-block;padding:1%;">
+<p data-height="265" data-theme-id="dark" data-slug-hash="bYzJor" data-default-tab="result" data-user="zakerytclarke" data-embed-version="2" data-pen-title="Spiral" class="codepen">See the Pen <a href="https://codepen.io/zakerytclarke/pen/bYzJor/">Spiral</a> by Zakery Clarke (<a href="https://codepen.io/zakerytclarke">@zakerytclarke</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+</div>
+<div style="width:48%;display:inline-block;">
+<p data-height="265" data-theme-id="dark" data-slug-hash="gGMjyN" data-default-tab="result" data-user="zakerytclarke" data-embed-version="2" data-pen-title="Particles" class="codepen">See the Pen <a href="https://codepen.io/zakerytclarke/pen/gGMjyN/">Particles</a> by Zakery Clarke (<a href="https://codepen.io/zakerytclarke">@zakerytclarke</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+</div>
 
 </div>
+
 <script>
 if (screen.height>screen.width) {
 var elms = document.getElementsByClassName('circle');
