--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Samples
 </div>
 
 </div>
-<div class="divider"  style="margin-top:200px;">
+<div class="divider"  style="margin-top:200px;text-align:center;">
 
     <a href="https://clarkecomputing.github.io">
     <div class="circle">
@@ -192,10 +192,10 @@ Expertise
 <div class="circle" style="width:100%;">
 <img src="js.png">
 </div>
-<div class="circle" style="width:100%;">
+<div style="width:100%;">
 <img src="html.png">
 </div>
-<div class="circle" style="width:100%;">
+<div style="width:100%;">
 <img src="css.png">
 </div>
 
@@ -207,20 +207,20 @@ Expertise
 Proficient
 </u>
 </h2>
-<div class="circle" style="width:100%;">
+<div style="width:100%;">
 <img src="wordpress.png">
 <h3 style="text-align:center;">
 WordPress
 </h3>
 </div>
-<div class="circle" style="width:100%;">
+<div style="width:100%;">
 <img src="php.png">
 <h3 style="text-align:center;">
 PHP
 </h3>
 </div>
 
-<div class="circle" style="width:100%;">
+<div style="width:100%;">
 <img src="mp.jpg">
 <h3 style="text-align:center;">
 Embeded C/C++
@@ -235,13 +235,13 @@ Embeded C/C++
 Learning
 </u>
 </h2>
-<div class="circle" style="width:100%;">
+<div style="width:100%;">
 <img src="ml.jpg">
 <h3 style="text-align:center;">
 Data Science
 </h3>
 </div>
-<div class="circle" style="width:100%;">
+<div style="width:100%;">
 <img src="python.png">
 <h3 style="text-align:center;">
 Python
