--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ display:block;
 margin-left:5%;
 padding:15px;
 }
+
 .ca{
 width:10vw;
 height:10vw;
@@ -71,6 +72,14 @@ color:black;
 .menu:hover{
  background-color:white;
   }
+.anchor:target{
+  padding-top:-20%;
+}
+h2 span {
+  margin-top:-300px;       
+  padding-bottom: 300px;
+  display: block;
+}
 </style>
 </head>
 <body>
@@ -106,6 +115,7 @@ zakerytclarke@gmail.com
 
 <div style="margin-top:40px;text-align:center;width:96%;margin-left:1%;display:block;">
 
+
 <a href="#about">
 <h2 class="menu">
 About
@@ -132,7 +142,7 @@ Projects
 Passions
 </h2>
 </a>
-<a href="#education">
+<a href="#samples">
 <h2 class="menu">
 Samples
 </h2>
@@ -142,11 +152,11 @@ Samples
 </div>
 <div class="divider"  style="margin-top:200px;text-align:center;">
 
-    <a href="https://clarkecomputing.github.io">
+    <a href="resume.pdf">
     <div class="circle">
-    <img src="https://clarkecomputing.github.io/logoblack.png"  style="background-color:white;">
+    <img src="resume.png"  style="background-color:white;">
     <h3 style="text-align:center;">
-    Hire Me
+    Resumé
     </h3>
     </div>
     </a>
@@ -154,7 +164,7 @@ Samples
   <div class="circle">
   <img src="github.gif">
   <h3 style="text-align:center;">
-  Portfolio
+Portfolio
   </h3>
   </div>
   </a>
@@ -171,17 +181,19 @@ Samples
 
 </div>
 <div class="divider">
-<h2 id="about">
-About
-</h2>
+  <h2>
+  <span id="about"> &nbsp; </span>
+  About
+  </h2>
 <p>
-Motivated. Self Taught. Passionate.
+Hi there! My name is Zakery Clarke and I am a self-taught programmer who has a variety of skills from website design to microproccesors. My specialization is in website design
 </p>
 </div>
 <div class="divider">
-<h2  id="skills">
-Skills
-</h2>
+  <h2 id="skills">
+  <span id="skills"> &nbsp; </span>
+  Skills
+  </h2>
 
 <div class="divider" style="width:20%;display:inline-block;text-align:center;vertical-align:top;">
 <h2>
@@ -197,6 +209,12 @@ Expertise
 </div>
 <div style="width:100%;">
 <img src="css.png">
+</div>
+<div style="width:100%;">
+<img src="xls.jpg">
+<h3 style="text-align:center;">
+Excel
+</h3>
 </div>
 
 </div>
@@ -236,9 +254,9 @@ Learning
 </u>
 </h2>
 <div style="width:100%;">
-<img src="ml.jpg">
+<img src="tensorflow.png">
 <h3 style="text-align:center;">
-Data Science
+Machine Learning
 </h3>
 </div>
 <div style="width:100%;">
@@ -252,16 +270,52 @@ Python
 
 </div>
 <div class="divider">
-<h2  id="work">
-Work Experience
-</h2>
+  <h2>
+  <span id="work"> &nbsp; </span>
+  Work Experience
+  </h2>
+
+<div class="circle">
+<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
+<h3 style="text-align:center;">
+&lt;Clarke&gt;&lt;/Computing&gt;
+</h3>
+<p class="descriptor">
+A lightweight JS framework for component developement<br>
+<b>2016-Present</b>
+</p>
+</div>
+
+<div class="circle">
+<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
+<h3 style="text-align:center;">
+E-TransControl
+</h3>
+<p class="descriptor">
+Embeded Systems Programmer and Website Design<br>
+<b>2017-Present</b>
+</p>
+</div>
+
+<div class="circle">
+<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
+<h3 style="text-align:center;">
+NM Apartment Advisors
+</h3>
+<p class="descriptor">
+Administrative Assistant that managed a variety of office tasks<br>
+<b>2014-2016</b>
+</p>
+</div>
+
 
 </div>
 
-<div id="projects" class="divider">
-<h2>
-Projects
-</h2>
+<div class="divider">
+  <h2>
+  <span id="projects"> &nbsp; </span>
+  Projects
+  </h2>
 
 <div class="divider">
 
@@ -352,7 +406,7 @@ A functional calculator with advanced graphing, unit conversions, and more<br>
 
 <a href="https://clarkecomputing.github.io">
 <div class="circle">
-<img src="emma.png">
+<img src="cclogobg.jpg">
 <h3 style="text-align:center;">
 Clarke Computing
 </h3>
@@ -412,12 +466,13 @@ After-Market Car Upgrades Website for E-TransControl<br>
   </div>
 
 <div class="divider">
-<h2 id="passions">
-Passions
-</h2>
-<a href="https://zakeryclarkephotography.wordpress.com/">
+  <h2>
+  <span id="passions"> &nbsp; </span>
+  Passions
+  </h2>
+  <a href="https://zakeryclarkephotography.wordpress.com/">
 <div class="circle">
-<img src="photo.jpg">
+<img src="map.png" style="border-radius:0%;">
 <h3 style="text-align:center;">
 Traveling
 </h3>
@@ -450,9 +505,11 @@ Photography
 
 
 <div class="divider">
-<h2 id="education" >
-Sample Projects
+  <h2>
+  <span id="sample"> &nbsp; </span>
+  Sample Work
 </h2>
+
 <div style="width:48%;display:inline-block;padding:1%;">
 <p data-height="265" data-theme-id="0" data-slug-hash="vWbgJM" data-default-tab="result" data-user="zakerytclarke" data-embed-version="2" data-pen-title="Login Form w/ Google Integration" class="codepen">See the Pen <a href="https://codepen.io/zakerytclarke/pen/vWbgJM/">Login Form w/ Google Integration</a> by Zakery Clarke (<a href="https://codepen.io/zakerytclarke">@zakerytclarke</a>) on <a href="https://codepen.io">CodePen</a>.</p>
 <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
@@ -471,6 +528,24 @@ Sample Projects
 </div>
 
 </div>
+<div class="divider">
+<h2>
+Sample Websites
+</h2>
+<a href="https://clarkecomputing.github.io">
+<img id="cc" src="cc.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
+<br>
+<a href="https://emmaxbuck.github.io">
+<img id="eb" src="eb.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
+</a>
+<a href="https://etranscontrol.com">
+<img id="et" src="et.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
+</a>
+</div>
+
+
+
+
 
 <script>
 if (screen.height>screen.width) {
